fix: display proper style of dark mode

--- a/src/components/Layout/layout.scss
+++ b/src/components/Layout/layout.scss
@@ -22,11 +22,18 @@ a {
   &.dark {
     svg {
       color: #a3aab3;
+      fill: #a3aab3;
     }
 
     @media screen and (max-width: $break-l) {
       #Header {
         background-color: $background-color-d;
+      }
+    }
+
+    .blog-post-content {
+      hr {
+        background-color: rgba(#fff, 0.2);
       }
     }
   }
